# django-react-demo

./: .gitignore  pyproject.toml  readme.md
backend/core/: settings.py
backend/core/api/: urls.py
backend/posts/: models.py
backend/posts/migrations/: 0001_initial.py
frontend/src/: App.jsx
